--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -16,93 +16,114 @@
 
 #population {
   table {
-    width: auto;
-    margin: 0 auto;
+	width: auto;
+	margin: 0 auto;
 
-    td,
-    th {
-      &:first-child {
-        text-align: left;
-        padding-right: 4rem;
-      }
+	td,
+	th {
+	  &:first-child {
+		text-align: left;
+		padding: .15rem 2rem;
+	  }
+	}
 
-      &:last-child {
-        padding-left: 4rem;
-      }
-    }
+	tr {
+	  &:nth-child(7) th {
+		text-align: right;
+		padding: .5rem 0;
+		font-weight: normal;
+	  }
 
-    tr {
-      &:nth-child(7) th {
-        text-align: right;
-        padding: .5rem 0;
-        font-weight: normal;
-      }
+	  &:last-child {
+		td {
+		  text-align: center;
+		}
+	  }
+	}
 
-      &:last-child {
-        td {
-          text-align: center;
-        }
-      }
-    }
+	#total {
+	  padding: 0 !important;
+	  min-width: 2rem;
+	}
 
-    #total {
-      padding: 0 !important;
-      min-width: 2rem;
-    }
-
-    #max_total {
-      font-weight: bold;
-    }
+	#max_total {
+	  font-weight: bold;
+	}
   }
 }
 
 
 #page_population {
   .container {
-    &:nth-child(4) {
-      .header {
-        &:before {
-          content: 'Output changes';
-        }
-      }
+	&:nth-child(4) {
+	  .header {
+		&:empty {
+		  display: block;
+		}
 
-      table {
-        width: auto;
+		&:before {
+		  content: 'Output changes';
+		  display: block;
+		}
+	  }
 
-        th,
-        td {
-          padding: .15rem 2rem;
-        }
-      }
-    }
+	  table {
+		th,
+		td {
+		  padding: .15rem 2rem;
+		}
+	  }
+	}
+
+	table {
+	  width: 100%;
+	  max-width: 600px;
+	  margin: 0 auto;
+
+	  tr {
+		td {
+		  background: $color-secondary;
+
+		  &[colspan="4"] {
+			background: transparent !important;
+		  }
+		}
+
+		&:nth-child(even) {
+		  td {
+			background: $color-secondary-alt;
+		  }
+		}
+	  }
+	}
   }
 
   .government_effects {
-    width: 50%;
-    margin: 0 auto;
+	width: 50%;
+	margin: 0 auto;
 
-    li {
-      display: flex;
+	li {
+	  display: flex;
 
-      span {
-        display: inline-block;
-        padding: .15rem 1rem;
-        flex-basis: 50%;
-      }
-    }
+	  span {
+		display: inline-block;
+		padding: .15rem 1rem;
+		flex-basis: 50%;
+	  }
+	}
 
-    .textlabel {
-      text-align: right;
-    }
+	.textlabel {
+	  text-align: right;
+	}
 
-    .textvalue {
-      text-align: left;
-      font-weight: bold;
-    }
+	.textvalue {
+	  text-align: left;
+	  font-weight: bold;
+	}
   }
 
   #tab2 .container:nth-child(2) .header {
-    display: none;
+	display: none;
   }
 }
 
@@ -110,6 +131,6 @@
   border: none;
 
   p {
-    margin-left: .5rem;
+	margin-left: .5rem;
   }
 }
