--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -81,11 +81,32 @@
 	  margin: 0 auto;
 
 	  tr {
+		th {
+		  input {
+			&#total {
+			  background: transparent;
+			  padding: 0 !important;
+			  height: 12px;
+			}
+		  }
+		}
+
 		td {
 		  background: $color-secondary;
 
 		  &[colspan="4"] {
 			background: transparent !important;
+		  }
+
+		  input {
+			&[type="number"] {
+			  border: 1px solid rgba($color-primary, .5);
+			  transition: ease all .5s;
+
+			  &:focus {
+				border: 1px solid $color-primary;
+			  }
+			}
 		  }
 		}
 
