--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -4,8 +4,8 @@
   .slider_slider {
 	background: rgb(26, 34, 44);
 	height: 4px;
-	line-height: 0px;
-	margin: 3px 4px 3px 4px;
+	line-height: 0;
+	margin: 7px 4px 7px 4px;
 	position: absolute;
 	width: 110px;
 	z-index: 1;
