--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -21,6 +21,10 @@
 	width: 0.8rem;
 	margin-left: 5px;
 	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, .5);
+
+	&:active {
+	  background: $color-eitraides;
+	}
   }
 }
 
