--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -9,13 +9,14 @@
 	position: absolute;
 	width: 110px;
 	z-index: 1;
-	border: 1px solid rgba(82, 165, 248, 0.5);
-	box-shadow: -1px 1px 3px 0px rgb(0, 0, 0);
+	border: 1px solid rgba(0, 0, 0, .5);
+	background: rgba($color-primary, .18);
+	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px rgba(255, 212, 0, .63);
   }
 
   .population_slider {
 	background: $color-primary;
-	background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+	background: linear-gradient(135deg, $color-primary 0%, rgba(109, 98, 37, .7) 100%);
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	height: 1.25rem;
 	width: 0.8rem;
@@ -23,7 +24,7 @@
 	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, .5);
 
 	&:active {
-	  background: $color-eitraides;
+	  background: linear-gradient(135deg, $color-terran 0%, rgba(109, 98, 37, .7) 100%);
 	}
   }
 }
