--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -24,7 +24,7 @@
 	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, .5);
 
 	&:active {
-	  background: linear-gradient(135deg, $color-terran 25%, rgb(109, 98, 37) 100%)
+	  background: linear-gradient(135deg, $color-primary 25%, rgb(109, 98, 37) 100%)
 	}
   }
 }
