--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -11,12 +11,13 @@
 	z-index: 1;
 	border: 1px solid rgba(0, 0, 0, .5);
 	background: rgba($color-primary, .18);
-	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px rgba(255, 212, 0, .63);
+	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
   }
 
   .population_slider {
 	background: $color-primary;
-	background: linear-gradient(135deg, $color-primary 0%, rgba(109, 98, 37, .7) 100%);
+
+	background: linear-gradient(135deg, $color-primary 25%, rgb(109, 98, 37) 100%);
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	height: 1.25rem;
 	width: 0.8rem;
@@ -24,7 +25,7 @@
 	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, .5);
 
 	&:active {
-	  background: linear-gradient(135deg, $color-primary 25%, rgb(109, 98, 37) 100%)
+	  background: linear-gradient(135deg, $color-primary 0%, rgba(109, 98, 37, .7) 100%);
 	}
   }
 }
