--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -13,10 +13,10 @@
 	background: rgba($color-primary, .18);
 	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
   }
+  /*! */
 
   .population_slider {
 	background: $color-primary;
-
 	background: linear-gradient(135deg, $color-primary 25%, $color-secondary 100%);
 	border: 1px solid rgba(0, 0, 0, 0.5);
 	height: 1.25rem;
