--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -45,7 +45,7 @@ $color-stolen: orange;
 //
 $color-gc: #0080ff;
 $color-moc: #8081FF;
-$color-mow: #FF0000;
+$color-mow: #ff4444;
 $color-mod: #00b500;
 //
 $color-progress-completed: #378059;
