--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -74,6 +74,10 @@ option {
   color: $color-text !important;
 }
 
+hr {
+  background: rgba($color-primary, .5);
+}
+
 
 /* Page Outline
    -------------------------------------------------------*/
