--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -87,7 +87,7 @@ div[class^='forum_thread_header'] {
 }
 
 .forum_post {
-  padding: 0 .5rem;
+  padding: 2rem 1rem;
   display: flex;
   flex-flow: row wrap;
 }
@@ -108,6 +108,7 @@ div[class^='forum_thread_header'] {
 .forum_poster {
   order: 2;
   flex-grow: 1;
+  font-size: 1rem;
 }
 
 .forum_post_title {
@@ -126,7 +127,9 @@ div[class^='forum_thread_header'] {
   order: 5;
   flex-basis: 100%;
   flex-shrink: 0;
-  padding-top: .5rem;
+  background: $color-secondary;
+  border: 1px solid rgba($color-primary, .5);
+  padding: 1rem;
 }
 
 .forum_post_notes {
@@ -135,11 +138,18 @@ div[class^='forum_thread_header'] {
 
 .forum_post_actions {
   order: 7;
+
+  span {
+	a {
+	  margin: 0;
+	}
+  }
 }
 
 .forum_post_seperator {
-  border-top: 1px solid $color-offwhite;
-  margin: 1rem .5rem;
+  border: 1px solid rgba($color-primary, .5);
+  margin: 1rem;
+  display: none;
 }
 
 .forum_post_delete,
