--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -13,19 +13,24 @@
 	background: rgba($color-primary, .18);
 	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
   }
+
   /*! */
 
   .population_slider {
 	background: $color-primary;
 	background: linear-gradient(135deg, $color-primary 25%, $color-secondary 100%);
-	border: 1px solid rgba(0, 0, 0, 0.5);
 	height: 1.25rem;
-	width: 0.8rem;
+	width: 0.6rem;
 	margin-left: 5px;
-	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, .5);
+	border-top: 1px solid rgba(80, 164, 246, 0.21);
+	border-left: 1px solid rgba(80, 164, 246, 0.21);
+	border-bottom: 1px solid rgba(black, .85);
+	border-right: 1px solid rgba(black, .8);
+	box-shadow: inset 0px -1px 2px 1px rgba(0, 0, 0, 0.5), 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
+	border-radius: 6px;
 
 	&:active {
-	  background: linear-gradient(135deg, $color-primary 0%, rgba(109, 98, 37, .7) 100%);
+	  background: linear-gradient(135deg, #ababab 0%, rgb(0, 1, 86) 100%);
 	}
   }
 }
