--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -30,7 +30,7 @@
 	border-radius: 6px;
 
 	&:active {
-	  background: linear-gradient(135deg, #ababab 0%, rgb(0, 1, 86) 100%);
+	  background: linear-gradient(135deg, #598aad 0%, #000000 100%);
 	}
   }
 }
