--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -1,76 +1,90 @@
 #page_scan {
   div#full_page {
-    display: table;
-    max-width: 900px;
+	display: table;
+	max-width: 900px;
 
-    .maintext {
-      > table {
-        width: auto;
-        min-width: 250px;
+	.maintext {
+	  > table {
+		width: auto;
+		min-width: 250px;
 
-        > tbody {
-          > tr {
-            background: $color-secondary;
+		> tbody {
+		  > tr {
+			background: $color-secondary;
 
-            &:first-child {
-              th {
-                padding: .5rem .125rem;
+			&:first-child {
+			  th {
+				padding: .5rem .125rem;
 				background: $color-bg-th;
-                text-align: center;
-              }
-            }
+				text-align: center;
+			  }
+			}
 
-            > th,
-            > td {
-              vertical-align: middle;
-            }
+			> th,
+			> td {
+			  vertical-align: middle;
+			}
 
-            > td {
-              padding: .25rem .75rem;
+			> td {
+			  padding: .25rem .75rem;
 
-              &:first-child {
+			  &:first-child {
 
-                a {
-                  padding-right: .5rem;
-                  width: 45px;
-                }
+				a {
+				  padding-right: .5rem;
+				  width: 45px;
+				}
 
-                span {
-                  font-size: 1rem;
-                  text-transform: uppercase;
-                  padding: 0 .125rem;
-                  width: 35px;
-                  text-align: center;
-                }
-              }
-            }
+				span {
+				  font-size: 1rem;
+				  text-transform: uppercase;
+				  padding: 0 .125rem;
+				  width: 35px;
+				  text-align: center;
+				}
+			  }
+			}
 
-            &:nth-child(even) {
-              background: $color-secondary-alt;
-            }
+			&:nth-child(even) {
+			  background: $color-secondary-alt;
+			}
 
-            table {
-              background: transparent;
+			table {
+			  background: transparent;
 
-              tr {
-                &:nth-child(odd) {
-                  th,
-                  td {
-                    background: rgba(0, 0, 0, .02);
-                  }
-                }
+			  tr {
+				&:nth-child(odd) {
+				  th,
+				  td {
+					background: rgba(0, 0, 0, .02);
+				  }
+				}
 
-                &:nth-child(even) {
-                  th,
-                  td {
-                    background: rgba(0, 0, 0, 0.1);
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+				&:nth-child(even) {
+				  th,
+				  td {
+					background: rgba(0, 0, 0, 0.1);
+				  }
+				}
+			  }
+			}
+		  }
+		}
+	  }
+	}
+  }
+}
+
+#page_waves {
+  #tab3 {
+	form {
+	  p {
+		line-height: 1.75;
+	  }
+
+	  input[value=" Request Scan "] {
+		margin-top: .5rem;
+	  }
+	}
   }
 }
